; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_genautomata.c_insert_insn_decl.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_genautomata.c_insert_insn_decl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@insn_decl_table = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64)* @insert_insn_decl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @insert_insn_decl(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i8**, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i32, i32* @insn_decl_table, align 4
  %5 = load i64, i64* %2, align 8
  %6 = call i8** @htab_find_slot(i32 %4, i64 %5, i32 1)
  store i8** %6, i8*** %3, align 8
  %7 = load i8**, i8*** %3, align 8
  %8 = load i8*, i8** %7, align 8
  %9 = icmp eq i8* %8, null
  br i1 %9, label %10, label %14

10:                                               ; preds = %1
  %11 = load i64, i64* %2, align 8
  %12 = inttoptr i64 %11 to i8*
  %13 = load i8**, i8*** %3, align 8
  store i8* %12, i8** %13, align 8
  br label %14

14:                                               ; preds = %10, %1
  %15 = load i8**, i8*** %3, align 8
  %16 = load i8*, i8** %15, align 8
  %17 = ptrtoint i8* %16 to i64
  ret i64 %17
}

declare dso_local i8** @htab_find_slot(i32, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
